<resources>
    <string name="app_name" translatable="false">Cool Sports</string>
    <string name="app_pref_name">cool_sports</string>


    <string name="animation">动画</string>
    <string name="animation_">动画</string>
    <string name="event">活动</string>
    <string name="event_">事件</string>
    <string name="details">详细信息</string>
    <string name="settings">设置</string>
    <string name="language">语言</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="share_app">分享应用</string>
    <string name="feedback">反馈</string>
    <string name="rate_us">评价我们</string>
    <string name="exit">退出</string>
    <string name="techniq">技术</string>
    <string name="no_events">没有事件</string>
    <string name="no_animation">无动画</string>
    <string name="goals_and_assists">进球和助攻</string>
    <string name="exit_app">退出应用</string>
    <string name="yes_confirm">是的，确认</string>
    <string name="no_cancel">不，取消</string>
    <string name="privacy_policy_link">https://flysports3.wordpress.com/</string>
    <string name="account_email" translatable="false">davoodi.mortaza@gmail.com</string>
    <string name="no_technic">但液体</string>


    <string name="fouls">犯规</string>
    <string name="subs">替换</string>
    <string name="no_internet_connection_message">没有可用的网络，请检查您的 WiFi 或数据连接</string>
    <string name="no_internet_active_message">没有可用的互联网，请检查您连接的 WIFI 或数据</string>
    <string name="interactive_quiz">互动测验</string>
    <string name="only_quiz">100% 免费仅在 宇盛体育</string>
    <string name="welcome_quiz">欢迎来到测验！</string>
    <string name="welcome_text">感谢您下载我们的应用程序！直接在您的手中享受所有 宇盛体育 功能！</string>
    <string name="next">下一个</string>
    <string name="this_is_an_image" translatable="false">this is an image</string>
    <string name="points">点</string>
    <string name="teams">团队</string>
    <string name="players">玩家</string>
    <string name="play_game">玩游戏</string>
    <string name="list_leaderboard">列表排行榜</string>
    <string name="search">搜索最高分</string>
    <string name="hello_blank_fragment">你好空白片段</string>
    <string name="congratulations">恭喜！</string>
    <string name="view_leaderboard">查看排行榜</string>
    <string name="back_to_home">返回首页</string>
    <string name="question_number">问题编号</string>
    <string name="you_got">你得到了</string>
    <string name="you_are_on"> 积分，你在这个测验排行榜上的好位置，继续努力。</string>
    <string name="top_score">最高分</string>
    <string name="height">玩家身高</string>
    <string name="shirt_number">衬衫号码</string>
    <string name="league">联赛</string>
    <string name="team">团队</string>
    <string name="qp">QP</string>
    <string name="guess_the_player">猜猜玩家？</string>
    <string name="guess_the_team">猜猜球队？</string>
    <string name="q">问：</string>
    <string name="current_location">当前位置</string>
    <string name="onboarding_header_1">欢迎来到 霸球体育</string>
    <string name="onboarding_body_1">感谢您下载我们的应用程序！ 直接在您的手中享受 宇盛体育 的所有功能！</string>
    <string name="onboarding_header_2">问题足球</string>
    <string name="onboarding_body_2">Quizzy 受到全球教师的信赖，可以保持学生的学习进度</string>
    <string name="onboarding_header_3">做好准备，成为超级巨星！</string>
    <string name="onboarding_body_3">尽可能多地收集所有积分，通过 Quizzy 成为班级中的超级明星！</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="wrong_answer">错误答案！</string>
    <string name="play_again">再玩一次</string>
    <string name="quit_game">退出游戏</string>
    <string name="ok">确定</string>
    <string name="english">英语</string>
    <string name="chinese">中文</string>
    <string name="indonesian">印尼语</string>
    <string name="vietnamese">越南语</string>
    <string name="thai_lang">泰语</string>
    <string name="select_language">选择语言</string>

    <string name="ago">前</string>
    <string name="seconds">秒</string>
    <string name="minutes">分钟</string>
    <string name="hours">小时</string>
    <string name="month">月</string>
    <string name="days">天</string>
    <string name="year">年</string>
    <string name="week">天</string>

    <string name="goal">目标</string>
    <string name="red_card">红牌</string>
    <string name="yellow_card">黄卡</string>
    <string name="penalty_kick">点球</string>
    <string name="own_goal">自己的目标</string>
    <string name="two_y_to_red">两黄转红</string>
    <string name="substitution">替换</string>
    <string name="missed_pen">漏罚</string>
    <string name="raw">其他事件</string>


    <string name="tee_off_first">先开球</string>
    <string name="first_corner_kic"> 首角</string>
    <string name="first_yellow">首次黄卡</string>
    <string name="number_of_shots"> 射击次数</string>
    <string name="shots_on_tarhet">射击</string>
    <string name="number_of_fouls">犯规次数</string>
    <string name="number_of_corners"> 角次数</string>
    <string name="number_of_corners_ot"> 角球次数（加时赛） </string>
    <string name="free_kicks">自由踢 </string>
    <string name="number_of_offsides">越位次数</string>
    <string name="own_goals">自己的进球</string>
    <string name="yello_cards">黄卡</string>
    <string name="yellow_cards_ot">黄卡（加时赛）</string>
    <string name="red_cards">红卡</string>
    <string name="ball_control">控制球</string>
    <string name="header">页首</string>
    <string name="save_the_ball">救球</string>
    <string name="goalkeeper_strikes">门将出击</string>
    <string name="lose_the_ball">输球</string>
    <string name="successful_steal">成功窃取</string>
    <string name="block">阻止</string>
    <string name="long_pass">长传</string>
    <string name="short_pass"> 短传</string>
    <string name="assist">助攻</string>
    <string name="successful_pass">顺利通过</string>
    <string name="first_sub">第一次替换</string>
    <string name="last_sub">最后一次替换</string>
    <string name="first_off">首次越位</string>
    <string name="last_off">最后一个越位</string>
    <string name="change_num_players">改变球员的数量</string>
    <string name="last_corner_kick">最后的角球</string>
    <string name="last_yello">最后一张黄牌</string>
    <string name="change_num_players_ot">改变球员的数量（加时赛）</string>
    <string name="num_off_ot"> 越位次数（加时赛）</string>
    <string name="miss_goal"> 错过一次进球</string>
    <string name="middle_column">中列</string>
    <string name="headers">成功标头的数目</string>
    <string name="blocked_shots">挡住的投篮  </string>
    <string name="tackles"> 铲球</string>
    <string name="exceeding_times">超出时间</string>
    <string name="out_of_bounds">超出界线</string>
    <string name="number_of_passes">通过次数</string>
    <string name="pass_success_rate"> 通过成功率 </string>
    <string name="number_of_attacks">攻击次数 </string>
    <string name="dangerous_attacks">危险攻击的次数</string>
    <string name="half_time_corners"> 半场角球 </string>
    <string name="posession">半场控球权</string>
    <string name="exit_app_text">确定要退出应用吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
</resources>