<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A9000000">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <ImageView
                android:id="@+id/ivCrossExitDialog"
                android:contentDescription="@string/this_is_an_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/ic_cross_with_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/exit_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center_horizontal"
                android:text="@string/exit_app"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:id="@+id/exit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/exit_app_text"
                android:textColor="@color/green_light"
                android:textSize="14sp"
                android:fontFamily="@font/oswald_regular"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exit_heading" />

            <TextView
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:id="@+id/yes_bt"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/red_ring_rect"
                android:backgroundTint="@color/green_light"
                android:gravity="center"
                android:text="@string/yes_confirm"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/oswald_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/no_bt"
                app:layout_constraintTop_toBottomOf="@+id/exit_text" />

            <TextView
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:id="@+id/no_bt"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_19sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/red_ring_rect"
                android:gravity="center"
                android:text="@string/no_cancel"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/oswald_regular"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/yes_bt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exit_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>