<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.home.HomeFragment">

    <data>

        <import type="android.view.View" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_green_gradient"
        app:layout_constraintBottom_toBottomOf="parent"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="0dp"
            android:layout_height="@dimen/_80sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_backL"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_30sdp"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_lang"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint"

            >

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">



            <RadioButton
                android:id="@+id/radio_lang1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:buttonTint="@color/grey_light"
                android:text="@string/english"
                android:fontFamily="@font/oswald_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"

                />


            <RadioButton
                android:id="@+id/radio_lang2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_English"
                android:buttonTint="@color/grey_light"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/chinese"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"

                />



            <RadioButton
                android:id="@+id/radio_lang3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_chinese"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/vietnamese"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:buttonTint="@color/grey_light"

                />


            <RadioButton
                android:id="@+id/radio_lang4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_lang3"
                android:buttonTint="@color/grey_light"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/indonesian"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"

                />



            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>