<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.home.HomeFragment">

    <data>

        <import type="android.view.View" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_green_gradient"
        app:layout_constraintBottom_toBottomOf="parent"

        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="0dp"
            android:layout_height="@dimen/_80sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_back_opp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_30sdp"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/green_light"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toEndOf="@id/img_back"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint"

            >

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_lang"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_language"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@id/img_lang"
                app:layout_constraintTop_toTopOf="parent"

                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_policy"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/ic_privacy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_lang"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_privacy"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/privacy_policy"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@id/img_policy"
                app:layout_constraintTop_toBottomOf="@id/tv_language" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_share"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_policy"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/share_app"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@id/img_share"
                app:layout_constraintTop_toBottomOf="@id/tv_privacy" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_feedback"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_share"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_feedback"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/feedback"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@id/img_feedback"
                app:layout_constraintTop_toBottomOf="@id/tv_share" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_rate"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/start"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_feedback"

                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/oswald_regular"
                android:gravity="center"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@id/img_rate"
                app:layout_constraintTop_toBottomOf="@id/tv_feedback"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_80sdp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_exit"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_exit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/oswald_regular"
            android:gravity="center"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/img_exit"
            app:layout_constraintTop_toBottomOf="@+id/view"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
